101-course/13-ingress/ingress-controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
      args:
      # this looks weird, if the args is here, then where's the command?
      # (it seems like we'll need a ConfigMap to store more value related to nginx)
      - /nginx-ingress-controller
      # - --configmap=$(POD_NAMESPACE)/nginx-configuration
      ports:
      - name: http
        containerPort: 80
      - name: https
        containerPort: 443
