101-course/13-ingress/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress
spec:
  selector:
    name: nginx-ingress
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
