101-course/13-ingress/ingress-wear-watch.yml
# Ingress backed by a single Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
  annotations:
    # both seem to be important now
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # rules:
  # # without the host it will accept all incoming traffic.
  # # Don't be stupied and setup your host
  # # - host: "foo.bar.com"
  # - http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/wear"
  #       backend:
  #         service:
  #           name: wear-service
  #           port:
  #             number: 80
  # # - host: "*.foo.com"
  # - http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/watch"
  #       backend:
  #         service:
  #           name: watch-service
  #           port:
  #             number: 80
  rules:
  - host: "watch.some-stuff.com"
    http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 80
  - host: "wear.some-stuff.com"
    http:
      paths:
      - backend:
          service:
            name: watch-service
            port:
              number: 80
