101-course/13-ingress/sample-single-ingres-resource-deployment.yml
# Ingress backed by a single Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80
